--- a/item-impl/src/main/resources/application.conf
+++ b/item-impl/src/main/resources/application.conf
@@ -2,5 +2,5 @@
 # Copyright (C) 2016 Lightbend Inc. <http://www.lightbend.com>
 #
 
-play.modules.enabled += "org.ecommerce.user.impl.UserModule"
+play.modules.enabled += "org.ecommerce.item.impl.ItemModule"
 
