New Item-service added
and tested

--- a/item-impl/src/main/resources/application.conf
+++ b/item-impl/src/main/resources/application.conf
@@ -1,6 +1,8 @@
-#
-# Copyright (C) 2016 Lightbend Inc. <http://www.lightbend.com>
-#
+play.modules.enabled += org.ecommerce.item.impl.ItemModule
 
-play.modules.enabled += "org.ecommerce.item.impl.ItemModule"
-
+// Check https://github.com/akka/akka-persistence-cassandra/blob/master/src/main/resources/reference.conf#L427
+cassandra-query-journal {
+  refresh-interval = 3s
+  eventual-consistency-delay = 3s
+  delayed-event-timeout = 30s
+}
