Some improvements in the front end

--- a/item-impl/src/main/resources/application.conf
+++ b/item-impl/src/main/resources/application.conf
@@ -1,4 +1,5 @@
 play.modules.enabled += org.ecommerce.item.impl.ItemModule
+akka.server.parsing.max-content-length = 20m
 
 // Check https://github.com/akka/akka-persistence-cassandra/blob/master/src/main/resources/reference.conf#L427
 cassandra-query-journal {
