--- a/item-impl/src/main/resources/application.conf
+++ b/item-impl/src/main/resources/application.conf
@@ -1,5 +1,6 @@
 play.modules.enabled += org.ecommerce.item.impl.ItemModule
 akka.server.parsing.max-content-length = 20m
+play.websocket.buffer.limit = 400000000000
 
 // Check https://github.com/akka/akka-persistence-cassandra/blob/master/src/main/resources/reference.conf#L427
 cassandra-query-journal {
